# rust_school

./: .readthedocs.yaml  README.md
.github/workflows/: book.yaml
hello_world/: book.toml
hello_world/src/: chapter_1.md
hi_world/: .gitignore  pyproject.toml
hi_world/hi_world/: README.md  dot.py  hello.py
hi_world/tutorial/: book.toml
hi_world/tutorial/src/: chapter_1.md
